@@ -6,11 +6,10 @@ function App() {
     <div className="App">
       <header className="App-header">
         <img src={logo} className="App-logo" alt="logo" />
-        <p>
-          Running on Gavin_test_1 branch
-          Page running successfully
-          Deployed via npm run deploy command onto homepage properties
-        </p>
+        <p>Running on Gavin_test_1 branch</p>
+        <p>Page running successfully</p>
+        <p>Deployed via npm run deploy command onto homepage properties</p>
+        <p>test</p>
         <a
           className="App-link"
           href="https://reactjs.org"
